# LiveImageStitching

./: .gitignore  CMakeLists.txt  ImageMosaic.cpp  configure.json  readme.md  readme_noob.md
cmake/: Findlog4cpp.cmake
include/: algorithm.h  capture_frame.h  image_mosaic.h  image_processing.h  log4cpp.properties  logger.h  timer.h  view_frame.h
include/log4cpp/: config.status  libtool
include/log4cpp/doc/: Doxyfile
include/log4cpp/doc/html/api/: AbortAppender_8cpp.html  AbortAppender_8cpp__incl.map  AbortAppender_8cpp__incl.md5  AbortAppender_8hh.html  AbortAppender_8hh__dep__incl.map  AbortAppender_8hh__dep__incl.md5  AbortAppender_8hh__incl.map  AbortAppender_8hh__incl.md5  AbortAppender_8hh_source.html  AppenderSkeleton_8cpp.html  AppenderSkeleton_8cpp__incl.map  AppenderSkeleton_8cpp__incl.md5  AppenderSkeleton_8hh.html  AppenderSkeleton_8hh__dep__incl.map  AppenderSkeleton_8hh__dep__incl.md5  AppenderSkeleton_8hh__incl.map  AppenderSkeleton_8hh__incl.md5  AppenderSkeleton_8hh_source.html  Appender_8cpp.html  Appender_8cpp__incl.map  Appender_8cpp__incl.md5  Appender_8hh.html  Appender_8hh__dep__incl.map  Appender_8hh__dep__incl.md5  Appender_8hh__incl.map  Appender_8hh__incl.md5  Appender_8hh_source.html  AppendersFactory_8cpp.html  AppendersFactory_8cpp__incl.map  AppendersFactory_8cpp__incl.md5  AppendersFactory_8hh.html  AppendersFactory_8hh__dep__incl.map  AppendersFactory_8hh__dep__incl.md5  AppendersFactory_8hh__incl.map  AppendersFactory_8hh__incl.md5  AppendersFactory_8hh_source.html  BasicConfigurator_8cpp.html  BasicConfigurator_8cpp__incl.map  BasicConfigurator_8cpp__incl.md5  BasicConfigurator_8hh.html  (+812 more)
include/log4cpp/doc/man/man3/: AbortAppender.cpp.3  AbortAppender.hh.3  Appender.cpp.3  Appender.hh.3  AppenderSkeleton.cpp.3  AppenderSkeleton.hh.3  AppendersFactory.cpp.3  AppendersFactory.hh.3  BasicConfigurator.cpp.3  BasicConfigurator.hh.3  BasicLayout.cpp.3  BasicLayout.hh.3  BoostThreads.hh.3  BufferingAppender.cpp.3  BufferingAppender.hh.3  Category.cpp.3  Category.hh.3  CategoryStream.cpp.3  CategoryStream.hh.3  Configurator.cpp.3  Configurator.hh.3  DailyRollingFileAppender.cpp.3  DailyRollingFileAppender.hh.3  DllMain.cpp.3  DummyThreads.cpp.3  DummyThreads.hh.3  Export.hh.3  FactoryParams.cpp.3  FactoryParams.hh.3  FileAppender.cpp.3  (+153 more)
include/log4cpp/src/.deps/: AbortAppender.Plo  Appender.Plo  AppenderSkeleton.Plo  AppendersFactory.Plo  BasicConfigurator.Plo  BasicLayout.Plo  BufferingAppender.Plo  Category.Plo  CategoryStream.Plo  Configurator.Plo  DailyRollingFileAppender.Plo  DummyThreads.Plo  FactoryParams.Plo  FileAppender.Plo  Filter.Plo  FixedContextCategory.Plo  HierarchyMaintainer.Plo  LayoutAppender.Plo  LayoutsFactory.Plo  LevelEvaluator.Plo  Localtime.Plo  LoggingEvent.Plo  MSThreads.Plo  NDC.Plo  OmniThreads.Plo  OstreamAppender.Plo  PThreads.Plo  PassThroughLayout.Plo  PatternLayout.Plo  Priority.Plo  Properties.Plo  PropertyConfigurator.Plo  PropertyConfiguratorImpl.Plo  RemoteSyslogAppender.Plo  RollingFileAppender.Plo  SimpleConfigurator.Plo  SimpleLayout.Plo  StringQueueAppender.Plo  StringUtil.Plo  SyslogAppender.Plo  (+2 more)
include/log4cpp/src/.libs/: liblog4cpp.so.5.0.6
include/log4cpp/tests/: dailyrolling_file.log.2018-02-10  testCategory  testConfig  testDailyRollingFileAppender  testErrorCollision  testFilter  testFixedContextCategory  testNDC  testPattern  testPriority  testProperties  testPropertyConfig  testRollingFileAppender  testbench  testmain
include/log4cpp/tests/.deps/: Clock.Po  testCategory.Po  testConfig.Po  testDailyRollingFileAppender.Po  testErrorCollision.Po  testFilter.Po  testFixedContextCategory.Po  testNDC.Po  testPattern.Po  testPriority.Po  testProperties.Po  testPropertyConfig.Po  testRollingFileAppender.Po  testbench.Po  testmain.Po
include/log4cpp/tests/.libs/: lt-testCategory  lt-testConfig  lt-testDailyRollingFileAppender  lt-testErrorCollision  lt-testFilter  lt-testFixedContextCategory  lt-testNDC  lt-testPattern  lt-testPriority  lt-testProperties  lt-testPropertyConfig  lt-testRollingFileAppender  testCategory  testConfig  testDailyRollingFileAppender  testErrorCollision  testFilter  testFixedContextCategory  testNDC  testPattern  testPriority  testProperties  testPropertyConfig  testRollingFileAppender  testbench  testmain
include/rapidjson/error/log4cpp/: Makefile
src/: algorithm.cpp  capture_frame.cpp  image_mosaic.cpp  image_processing.cpp  logger.cpp  main.cpp  main_calibration.cpp  timer.cpp  view_frame.cpp
(+121 files in other folders)
